@@ -16,7 +16,7 @@
   <sect2 id="rnadmin-sabayon">
       <title>Lockdown and User Profile Editor</title>
 		<para>
-			Sabayon allows administrators to set up user profiles inside a live,
+			The &quot;Sabayon&quot; User Profile Editor allows administrators to set up user profiles inside a live,
 			interactive GNOME session. When a profile is created or edited, a nested
 			GNOME session is started up, which the administrator can use to change
 			GConf defaults and mandatory keys in their own GNOME session.
@@ -30,7 +30,18 @@
 			tuned as needed based on user feedback. Since they are in a centralized
 			location they allow easy maintenance and deployment.
 		</para>
-		<para>TODO: Describe sabayon/pessalus improvements.</para>
+		<para>In GNOME &gnomeversion; the User Profile Editor can also be used to set 
+		default preferences for OpenOffice applications in addition to the existing support 
+		for GNOME and Mozilla applications.</para>
+
+    <figure>
+				<title>Setting default OpenOffice preferences for a user profile.</title>
+				<mediaobject>
+					<imageobject>
+						<imagedata fileref="figures/rnadmin-sabayon_editing_openoffice.png"/>
+					</imageobject>
+				</mediaobject>
+			</figure>
   </sect2>
 
     <sect2 id="rnadmin-gdm">
