@@ -14,19 +14,15 @@ DOC_FIGURES = \
 	figures/rnusers-arabic-window-switcher.png	\
 	figures/rnusers-eog.png	\
 	figures/rnusers-nautilus-photos.png	\
-	figures/rndevelopers-accerciser.png	\
 	figures/rnusers-evince-forms.png	\
 	figures/rnusers-powermanager-battery.png	\
-	figures/rndevelopers-glade-dockable.png	\
 	figures/rnusers-evolution-7-days.png	\
 	figures/rnusers-screensave-note.png	\
 	figures/rndevelopers-library-gnome-org.png	\
 	figures/rnusers-evolution-attachment.png	\
 	figures/rnusers-seahorse-encrypt-multiple-files.png	\
-	figures/rndevelopers-pango-nko-part.png	\
 	figures/rnusers-evolution-backup.png	\
 	figures/rnusers-tomboy-sync.png	\
-	figures/rndevelopers-pango-opentype-language.png	\
 	figures/rnusers-evolution-notification.png	\
 	figures/rnusers-totem_codec_search_video.png	\
 	figures/rnusers-control-panel-appearance.png	\
@@ -35,6 +31,11 @@ DOC_FIGURES = \
 	figures/rnusers-control-panel-encryption-keyring.png	\
 	figures/rnusers-gtkfilechooser-search.png	\
 	figures/rnusers-control-panel-preferred-apps-accessibility.png	\
-	figures/rnusers-nautilus-drive-properties.png
+	figures/rnusers-nautilus-drive-properties.png	\
+	figures/rndevelopers-pango-nko-part.png	\
+	figures/rndevelopers-pango-opentype-language.png	\
+	figures/rndevelopers-glade-dockable.png	\
+	figures/rndevelopers-accerciser.png	\
+	rnadmin-sabayon_editing_openoffice.png
 
 
