@@ -1,5 +1,11 @@
 2007-09-03  Murray Cumming  <murrayc@murrayc.com>
 
+	* docbook/C/rnadmins.xml:
+	* docbook/Makefile_shared.am_fragment: Added a sabayon 
+	screenshot and explained what is new.
+
+2007-09-03  Murray Cumming  <murrayc@murrayc.com>
+
 	* docbook/C/release-notes.xml: Added an extra introductory 
 	paragraph listing the big changes, press-release style.
 	* docbook/Makefile_shared.am_fragment: 
